--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,20 @@ body {
     color: #434455;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 .link {
     text-decoration: none;
 }
@@ -450,6 +464,50 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-right: 120px;
 }
 
+.footer-media {
+    margin-right: 80px;
+}
+
+.subscribe-input {
+    background-color: transparent;
+    width: 264px;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    font-size: 12px;
+    line-height: 2;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    padding-top: 8px;
+    padding-left: 16px;
+    padding-bottom: 8px;
+}
+
+.subscribe-button {
+    display: flex;
+    color: #FFFFFF;
+    fill: #FFFFFF;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 24px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    background: #4D5AE5;
+    border-radius: 4px;
+    border: 0;
+}
+
+.footer-subscribe {
+    display: flex;
+    gap: 24px;
+}
+
 /* portfolio */
 
 .portfolio {
@@ -592,6 +650,11 @@ transform: translateY(0);
         transition: transform 200ms linear;
     }
 
+    .modal-form {
+        margin-top: 16px;
+        margin-bottom: 24px;
+    }
+
     .modal-button {
         border-radius: 50%;
         width: 24px;
@@ -602,6 +665,149 @@ transform: translateY(0);
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .modal-title {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: var(--logo-color-2);
+        margin-top: 24px;
+    }
+
+    .modal-labels {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+    }
+
+    .modal-inputs {
+        display: block;
+        width: 360px;
+        height: 40px;
+        margin-top: 4px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        padding-left: 38px;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .modal-inputs:focus {
+        border: 1px solid rgba(77, 90, 229, 1);
+        outline: none;
+    }
+
+    .modal-form-areas {
+        margin-bottom: 8px;
+    }
+
+    .modal-textarea {
+        display: block;
+        width: 360px;
+        height: 120px;
+        resize: none;
+        margin-top: 4px;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        padding: 8px 16px;
+        margin-bottom: 16px;
+    }
+
+    .modal-textarea:focus {
+        border: 1px solid rgba(77, 90, 229, 1);
+        outline: none;
+    }
+
+    .modal-accept {
+        display: flex;
+        align-items: baseline;
+        flex-wrap: wrap;
+        gap: 8px;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+    }
+
+    .modal-accept span {
+        width: 16px;
+        height: 16px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 2px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        fill: transparent;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    }
+
+    .modal-input-accept:checked + .modal-accept span {
+        background-color: rgba(64, 75, 191, 1);
+        border: none;
+        fill: rgba(244, 244, 253, 1);
+    }
+
+    .modal-input-accept:focus + .modal-accept span {
+        border-color: rgba(64, 75, 191, 1);
+    }
+
+    .modal-images {
+        position: absolute;
+        left: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .modal-inputs:focus + .modal-images {
+        fill: rgba(64, 75, 191, 1);
+    }
+
+    .input-wrap {
+        display: flex;
+        position: relative;
+    }
+
+    /* .modal-accept::before {
+        content: '';
+        width: 16px;
+        height: 16px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 2px;
+        display: block;
+    }
+
+    .modal-input-accept:checked + .modal-accept::before {
+        background-color: rgba(64, 75, 191, 1);
+        border: none;
+    } */
+
+    .modal-submit-button {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.04em;
+        color: #FFFFFF;
+        width: 169px;
+        height: 56px;
+        background-color: #4D5AE5;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border: 0;
+        border-radius: 4px;
+        display: block;
+        margin: 0 auto;
     }
 
     .is-hidden {
